# inno-portfolio-collector

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: projects.json
docs/: macos-release-checklist.md
macos/: Package.swift
packaging/: Info-Collector.plist  Info-Reader.plist  collector_helper_entry.py  collector_web_pilot_README_zh_CN.txt  collector_web_server_entry.py  moore_exporter_entry.py  reader_helper_entry.py
scripts/: build_collector_web_pilot_dmg.py  build_helpers.py  build_macos_apps.py  check_repository_policy.py  release_macos.py  test_swift.sh
tests/: test_build_collector_web_pilot_dmg.py  test_build_helpers.py  test_build_macos_apps.py  test_ci_workflow.py  test_collector_ui_contract.py  test_config.py  test_content_manifest.py  test_dashboard.py  test_diagnostics.py  test_distribution_end_to_end.py  test_draft_package.py  test_end_to_end.py  test_exporter.py  test_frozen_web_server.py  test_helper_protocol.py  test_identity.py  test_ingest.py  test_package.py  test_pipeline.py  test_release_macos.py  test_repository_policy.py  test_state.py  test_swift_test_script.py  test_update_package.py  test_vault.py  test_web_assets.py  test_web_controller.py  test_web_delivery.py  test_web_downloads.py  test_web_drafts.py  test_web_end_to_end.py  test_web_jobs.py  test_web_login_flow.py  test_web_moore_runtime.py  test_web_preflight.py  test_web_security.py  test_web_server.py  test_web_uploads.py
(+74 files in other folders)
