[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inno-portfolio-collector"
version = "0.2.1"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.0,<7.0"]

[project.scripts]
inno-collect = "inno_collector.cli:main"
inno-reader-helper = "inno_collector.reader_helper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"inno_collector.web" = ["assets/*", "resources/*"]
